[package]
name = "influxdb"
version = "0.0.4"
authors = ["Gero Gerke <11deutron11@gmail.com>"]
edition = "2018"
description = "InfluxDB Driver for Rust"
keywords = ["influxdb", "database", "influx"]
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository = "https://github.com/Empty2k12/influxdb-rust"

[badges]
travis-ci = { repository = "Empty2k12/influxdb-rust", branch = "master" }
coveralls = { repository = "Empty2k12/influxdb-rust", branch = "master", service = "github" }

[dependencies]
reqwest = "0.10.0-alpha.1"
futures-preview = "0.3.0-alpha.19"
tokio = "0.2.0-alpha.6"
failure = "0.1.5"
serde = { version = "1.0.101", optional = true, features = ["serde_derive"] }
serde_json = { version = "1.0.41", optional = true }

[features]
use-serde = ["serde", "serde_json"]
default = ["use-serde"]
